2009-09-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/at89Sx051.h: new, added, applied patch 2858106,
	  thanks Ben Boeckel

2009-09-08 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/mcs51/p89v51rd2.h: Watchdog Timer Control sfr is
	  bit addressable. 

2009-08-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genAnd, genOr): applied patch for bug 2719592,
	  thanks to Robert Larice
	* support/regression/tests/bug2719592.c: new, added

2009-09-02 Borut Razem <borut.razem AT siol.net>

	* support/regression/ports/gbz80/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/z80/spec.mk: fixed *z80 regression test if
	  built ran directly from sdcc source directory

2009-08-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/asxxsrc/asmain.c,
	* as/asxxsrc/asxxxx.h: fixed warning, main should return int
	* as/hc08/Makefile.in,
	* as/mcs51/Makefile.in: added -lm to LDFLAGS

2009-08-31 Raphael Neider <rneider AT web.de>

	* device/lib/_fsmul.c, device/lib/pic/libsdcc/fsmul.c,
	  device/lib/pic16/libsdcc/float/fsmul.c: fix overflow during rounding
	* support/regression/tests/float.c: add testcase for the fix

2009-08-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (aopGet): applied patch 2837100 to fix bug 2805333
	* support/regression/tests/bug2805333.c: new, added,
	  thanks Ruud van Silfhout

2009-08-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/ctype.h: removed _REENTRANT as they are already with
	  --stack-auto, optimized _tolower and _toupper with char casts
	* device/include/string.h,
	* device/lib/_strcat.c,
	* device/lib/_strchr.c,
	* device/lib/_strcmp.c,
	* device/lib/_strcpy.c,
	* device/lib/_strcspn.c,
	* device/lib/_strlen.c,
	* device/lib/_strncat.c,
	* device/lib/_strncmp.c,
	* device/lib/_strncpy.c,
	* device/lib/_strpbrk.c,
	* device/lib/_strrchr.c,
	* device/lib/_strspn.c,
	* device/lib/_strstr.c,
	* device/lib/_strtok.c,