@@ -74,7 +74,7 @@ struct
 { E_FUNCTION_EXPECTED, ERROR_LEVEL_ERROR,
    "called object is not a function" },
 { E_USING_ERROR, ERROR_LEVEL_ERROR,
-   "'using', 'interrupt' or 'reentrant' must follow a function definiton.'%s'" },
+   "'using', 'interrupt' or 'reentrant' must follow a function definition.'%s'" },
 { E_SFR_INIT, ERROR_LEVEL_ERROR,
    "Absolute address & initial value both cannot be specified for\n"
    " a 'sfr','sbit' storage class, initial value ignored '%s'" },
@@ -151,7 +151,7 @@ struct
 { E_BIT_ARRAY, ERROR_LEVEL_ERROR,
    "Array or Pointer to bit|sbit|sfr not allowed.'%s'" },
 { E_DUPLICATE_TYPEDEF, ERROR_LEVEL_ERROR,
-   "typedef/enum '%s' duplicate. Previous definiton Ignored" },
+   "typedef/enum '%s' duplicate. Previous definition Ignored" },
 { E_ARG_TYPE, ERROR_LEVEL_ERROR,
    "Actual Argument type different from declaration %d" },
 { E_RET_VALUE, ERROR_LEVEL_ERROR,
@@ -193,7 +193,7 @@ struct
 { E_INT_DEFINED, ERROR_LEVEL_ERROR,
    "interrupt no '%d' already has a service routine '%s'" },
 { E_INT_ARGS, ERROR_LEVEL_ERROR,
-   "interrupt routine cannot have arguments, arguments ingored" },
+   "interrupt routine cannot have arguments, arguments ignored" },
 { E_INCLUDE_MISSING, ERROR_LEVEL_ERROR,
    "critical compiler #include file missing.            " },
 { E_NO_MAIN, ERROR_LEVEL_ERROR,
